# tools-scripts

branchs-alnz/: README.md  requirements.txt  test_workflow_branch_inventory.py  workflow_branch_inventory.py
inventario/: README.md  pyproject.toml  requirements-github-app.txt
inventario/repo_inventory/: __init__.py  cli.py  github.py  scanner.py  schema.json
inventario/tests/: test_scanner.py
